<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:layout_marginTop="200sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/banner_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/appname"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="129dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70sp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_sign_in"
            android:layout_width="300sp"
            android:layout_height="56sp"
            android:background="@drawable/radius_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="7sp"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/pswd_sign_in"
            android:layout_width="300sp"
            android:layout_height="56sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/radius_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/hint_pswd"
            android:inputType="textPassword"
            android:paddingLeft="7sp"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="226sp"
            android:layout_height="56sp"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:background="@drawable/radius_btn"
            android:fontFamily="@font/overpass_mono"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_in_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/overpass_mono"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>